--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node backend_app.js"
   },
   "dependencies": {
+    "@xenova/transformers": "^2.4.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -14,7 +15,6 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.32.1",
-    "@xenova/transformers": "^2.4.1"
+    "sequelize": "^6.32.1"
   }
 }
